<?xml version="1.0" encoding="utf-8"?>
<layout>
    <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.onboarding.OnBoardingActivity"
        android:background="@color/white"
        android:paddingBottom="18dp">

        <TextView
            android:id="@+id/tv_onboarding_skip"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="@id/btn_onboarding_next"
            app:layout_constraintTop_toTopOf="@id/btn_onboarding_next"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="20dp"
            style="@style/TextAppearance.Body2"
            android:textColor="@color/black_80"
            android:text="@string/skip"
            />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_onboarding_next"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="12dp"
            style="@style/Widget.MaterialComponents.Button.TextButton"
            android:text="@string/next"
            android:textColor="@color/primary_100"
            android:fontFamily="@font/rubik_regular"
            android:textSize="16sp"
            android:textAllCaps="false"
            />

        <com.google.android.material.progressindicator.LinearProgressIndicator
            android:id="@+id/lpi_onboarding"
            android:layout_width="156dp"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toTopOf="@id/btn_onboarding_next"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginBottom="40dp"
            android:max="300"
            app:trackCornerRadius="4dp"
            app:trackThickness="8dp"
            app:trackColor="@color/primary_20"
            app:indicatorColor="@color/primary_100"
            android:progress="0"
            />

        <androidx.viewpager2.widget.ViewPager2
            android:id="@+id/vp_onboarding"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toTopOf="@id/lpi_onboarding"
            />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>