...
        android:layout_height="match_parent"
        tools:context=".ui.onboarding.OnBoarding1Fragment"
        android:paddingHorizontal="16dp"
        >

        <ImageView
            android:id="@+id/iv_onboarding"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toTopOf="@id/tv_onboarding_title"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
...
